--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
-  cloud_firestore: ^5.5.2  
+  cloud_firestore: ^5.5.2
+  shared_preferences: ^2.2.2
+  flutter_local_notifications: ^17.2.3
+  timezone: ^0.9.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
