logo and name changed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
     
     <application
-        android:label="new_test"
+        android:label="Actify"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
